deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-lightning-talk-demo
  labels:
    app: k8s-lightning-talk-demo
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: k8s-lightning-talk-demo
  template:
    metadata:
      labels:
        app: k8s-lightning-talk-demo
    spec:
      containers:
      - name: k8s-lightning-talk-demo
        image: docker.io/alenaintergen/k8s-lightning-talk-demo:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "250m"
