service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-demo-svc-cip
  labels:
    app: k8s-demo
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: k8s-demo
