service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-demo-svc-lb
  labels:
    app: k8s-demo
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: k8s-demo
