service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-demo-svc-np
  labels:
    app: k8s-demo
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 80
    nodePort: 31337
    protocol: TCP
  selector:
    app: k8s-demo
