service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-lightning-talk-demo-svc
  labels:
    app: k8s-lightning-talk-demo
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: k8s-lightning-talk-demo
