service-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: k8s-demo-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  - hosts:
    - alenachoong.com
    secretName: alenachoong-tls
  rules:
  - host: alenachoong.com
    http:
      paths:
      - backend:
          serviceName: k8s-demo
          servicePort: 80
        path: /(.*)
      # - backend:
      #     serviceName: ingress-demo
      #     servicePort: 80
      #   path: /hello-world-two(/|$)(.*)
